fixed responsiveness on smaller screens

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -117,6 +117,10 @@ header {
   margin-top: 120px;
 }
 
+.content {
+  margin: 0 10px 20px 10px;
+  text-align: center;
+}
 .content h1 {
   font-size: 64px;
 }
@@ -233,9 +237,7 @@ footer .social-links:hover {
     padding: 0;
     text-align: center;
   }
-  .content {
-    text-align: center;
-  }
+
   .profile-pic {
     margin-top: 60px;
     padding: 20px;
